<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DashboardActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="@dimen/twenty_dp">
        <Button
            android:id="@+id/return_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="return"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/one_fivedp" />
        <TextView
            android:id="@+id/selectDateText"
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Select a date"
            android:textSize="@dimen/twenty_two_sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/results_button"
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/results_button"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/one_fivedp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/twenty_dp">
        <Button
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/backMonth"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:textSize="@dimen/twenty_dp"
            android:onClick="previousMonthAction"/>
        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/MonthYearPlaceholder"
            android:textSize="@dimen/twenty_two_sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forwardMonth"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:textSize="@dimen/twenty_two_sp"
            android:onClick="nextMonthAction"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Sunday"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="@dimen/sixteen_sp"/>
        <TextView
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Monday"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="@dimen/sixteen_sp"/>
        <TextView
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Tuesday"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="@dimen/sixteen_sp"/>
        <TextView
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Wednesday"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="@dimen/sixteen_sp"/>
        <TextView
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Thursday"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="@dimen/sixteen_sp"/>
        <TextView
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Friday"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="@dimen/sixteen_sp"/>
        <TextView
            android:layout_width="@dimen/zerodp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Saturday"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="@dimen/sixteen_sp"/>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calenderRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>
