<resources>
    <string name="app_name">My-Money-App</string>
    <string name="hello_world">Hello world!</string>
    <string name="return_button">Return</string>
    <string name="results_button">Results</string>
    <string name="dashboard">Dashboard</string>
    <string name="input_button">input</string>
    <string name="user_login_icon_desc">User login icon</string>
    <string name="login_label">LOGIN</string>
    <string name="email_label">EMAIL</string>
    <string name="email_hint">yourname@gmail.com</string>
    <string name="password_label">PASSWORD</string>
    <string name="password_hint">Enter password</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="my_money">MY MONEY</string>
    <string name="backMonth"><![CDATA[<-]]></string>
    <string name="forwardMonth"><![CDATA[->]]></string>

    <string name="to_dashboard">To Dashboard</string>


    <string name="hours_studied">hours_studied</string>
    <string name="expenses">expenses</string>
    <string name="add">add</string>
    <string name="back">back</string>
    <string name="Sunday">SUN</string>
    <string name="Monday">MON</string>
    <string name="Tuesday">TUES</string>
    <string name="Wednesday">WED</string>
    <string name="Thursday">THURS</string>
    <string name="Friday">FRI</string>
    <string name="Saturday">SAT</string>
    <string name="MonthYearPlaceholder">Month Year</string>

    <string name="MyMoneyApp">genderDropdown</string>
    <string-array name="gender">
        <item>male</item>
        <item>female</item>
        <item>prefer not to say</item>
    </string-array>


</resources>